<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1C1919"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#E2EFEC"
        android:textSize="48sp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:gravity="end|bottom"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:textSize="25sp"
            android:backgroundTint="#3BAFA5"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:textSize="25sp"
            android:backgroundTint="#3BAFA5"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textSize="25sp"
            android:backgroundTint="#3BAFA5"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:text="@string/div"
            android:textSize="25sp"
            android:backgroundTint="#227876"
            tools:ignore="UsingOnClickInXml"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:textSize="25sp"
            android:backgroundTint="#3BAFA5"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:textSize="25sp"
            android:backgroundTint="#3BAFA5"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textSize="25sp"
            android:backgroundTint="#3BAFA5"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:text="@string/mul"
            android:textSize="25sp"
            android:backgroundTint="#227876"
            tools:ignore="UsingOnClickInXml"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:textSize="25sp"
            android:backgroundTint="#3BAFA5"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textSize="25sp"
            android:backgroundTint="#3BAFA5"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textSize="25sp"
            android:backgroundTint="#3BAFA5"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="25sp"
            android:backgroundTint="#227876"
            tools:ignore="UsingOnClickInXml"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:textSize="25sp"
            android:backgroundTint="#3BAFA5"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDecimal"
            android:text="@string/dot"
            android:textSize="25sp"
            android:backgroundTint="#3BAFA5"
            tools:ignore="UsingOnClickInXml"/>


        <Button
            android:id="@+id/btnCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onClear"
            android:layout_weight="1"
            android:text="@string/clr"
            android:textSize="20sp"
            android:backgroundTint="#3BAFA5"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="25sp"
            android:backgroundTint="#227876"
            tools:ignore="UsingOnClickInXml"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="2dp"
            android:onClick="onEqual"
            android:text="@string/equal"
            android:textSize="25sp"
            android:backgroundTint="#20605A"
            tools:ignore="UsingOnClickInXml"/>



    </LinearLayout>

</LinearLayout>